# api_fastapi

./: pyproject.toml
tests/: test_app.py
