[tool.poetry]
name = "fastdozero"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.12.*"
fastapi = {extras = ["standard"], version = "^0.115.5"}
pytest = "^8.3.3"


[tool.poetry.group.dev.dependencies]
ruff = "^0.7.4"
taskipy = "^1.14.0"
coverage = "^7.6.7"
pytest-cov = "^6.0.0"
ignr = "^2.2"

[tool.pytest.ini_options]
pythonpath = "."
addopts = '-p no:warnings'

[tool.taskipy.tasks]
run = 'fastapi dev fastdozero/app.py'
pre_test = 'task lint'
test = 'pytest -s -x --cov=fastdozero -vv'
post_test = 'coverage html'
lint = 'ruff check .; ruff check . --diff'
format = 'ruff check . --fix; ruff format .'

[tool.ruff]
line-length = 79
extend-exclude = ["migrations"]

[tool.ruff.lint]
preview = true
select = ['I', 'F', 'E', 'W', 'PL', 'PT']

[tool.ruff.format]
preview = true
quote-style = 'single'

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
